...
import UIKit

class DetailViewController: UIViewController {
    
    weak var viewModel: ItemCellViewModel?
    
    let scrollView = UIScrollView()
    let contentView = UIView()
    
    private lazy var productImage: CachedImageView = {
        let imageView = CachedImageView()
        imageView.translatesAutoresizingMaskIntoConstraints = false
        imageView.accessibilityIdentifier = "productImage" // Pour les tests UI
...
